# argus-pw-rust

./: Cargo.toml  README.md  config.toml
src/: cli.rs  config.rs  main.rs  pw.rs  setup.rs
