[package]
name = "argus-pw-rust"
version = "0.1.0"
authors = ["LCL"]
description = "A CLI tool for generating passwords."
repository = "https://github.com/yourusername/my_cli_app"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[[bin]]
name = "argus"
path = "src/main.rs"
