[package]
name = "argus-pw-rust"
version = "0.2.0"
authors = ["LCL"]
description = "A CLI tool for generating passwords."
repository = "https://github.com/mako-lcl/argus-pw-rust"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
cli-clipboard = "0.4.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[[bin]]
name = "argus"
path = "src/main.rs"
